# ptsm

./: .env.example  .gitignore  CLAUDE.md  README.md  prd.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs-sync.yml  harness.yml
codex-plan-runner/: README.md  pyproject.toml
codex-plan-runner/src/codex_plan_runner/: __init__.py  __main__.py  cli.py  parser.py  runner.py
codex-plan-runner/tests/: test_cli.py  test_parser.py  test_runner.py
docs/: architecture.md  harness-engineering.md  index.md  observability.md  operations.md  playbooks.md  runtime.md  shared-contracts.md  skills.md
docs/operations/: cloud-bootstrap.md  local-runbook.md  task-completion-automation.md
docs/plans/: 2026-03-14-ptsm-agent-platform.md  2026-03-15-codex-plan-runner.md  2026-03-15-xhs-mcp-spike.md  2026-03-16-codex-plan-runner-standalone.md  2026-03-16-codex-plan-runner-v2.md  2026-03-19-ptsm-ops-runbook-and-publish-verification.md  2026-03-20-ptsm-skill-surface-design.md  2026-03-24-ptsm-agent-platform-rebaseline.md  2026-03-29-ptsm-prd-status-realignment.md  2026-04-17-agent-readable-docs-map.md  2026-04-17-harness-engineering-architecture-guards.md  2026-04-17-harness-engineering-first-stage.md  2026-04-17-harness-engineering-runtime-state-and-events.md  2026-04-18-deepseek-json-publish-fix.md  2026-04-18-harness-evals.md  2026-04-18-harness-report.md  2026-04-18-harness-roadmap.md  2026-04-18-plan-run-failure-reasons-and-query.md  2026-04-18-publish-diagnostics.md  2026-04-18-side-effect-ledger.md  (+10 more)
shared_contracts/: README.md  skill_manifest.template.yaml
(+158 files in other folders)
