[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ptsm"
version = "0.1.0"
description = "Playbook-driven social media agent runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0,<2.0.0",
    "langchain-deepseek>=1.0.0,<2.0.0",
    "langchain-mcp-adapters>=0.1.9,<1.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "structlog>=25.4.0,<26.0.0",
]

[project.scripts]
ptsm = "ptsm.bootstrap:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ptsm"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
